Improve vanilla properties framework; Implement portal cooldown widget